<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".AddProduct">
    <RelativeLayout
        android:id="@+id/r3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18">
        <LinearLayout
            android:id="@+id/layeradmin1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/admin_add_name"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="For"
                android:textSize="30dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/admin_add_name1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Category Name"
                android:textSize="30dp"
                android:textColor="@color/red"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/select_product_image"
            android:layout_width="189dp"
            android:layout_height="176dp"
            android:layout_centerHorizontal="true"
            android:padding="@android:dimen/app_icon_size"
            android:scaleType="centerCrop"
            android:layout_below="@+id/layeradmin1"
            android:src="@drawable/camera"
            android:background="@drawable/atw_border_image" />

        <EditText
            android:id="@+id/Product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_product_image"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:hint="@string/productName"
            android:inputType="textMultiLine"
            android:padding="14dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/Product_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_name"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:padding="14dp"
            android:hint="@string/ProductPrice"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/Product_Stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_Price"
            android:layout_marginTop="10dp"
            android:background="@drawable/atw_border_image"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"

            >

            <RadioButton
                android:id="@+id/rdInStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:text="@string/instock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

            <RadioButton
                android:id="@+id/rdOutStock"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:text="@string/outStock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.878"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/Product_COD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_Stock"
            android:layout_marginTop="10dp"
            android:background="@drawable/atw_border_image"
            android:orientation="horizontal"
            android:paddingEnd="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738">

            <RadioButton
                android:id="@+id/rdBtnAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:text="@string/CODAvaliable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

            <RadioButton
                android:id="@+id/rdBtnNotAvailable"
                android:layout_width="225dp"
                android:layout_height="match_parent"
                android:text="@string/CODUnavaliable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.878"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

        </RadioGroup>

        <EditText
            android:id="@+id/Product_DeliveryArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_COD"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:hint="@string/DeliveryArea"

            android:inputType="textPersonName"
            android:padding="14dp" />

        <EditText
            android:id="@+id/Product_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_DeliveryArea"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:hint="@string/DeliveryDate"
            android:padding="14dp" />

        <EditText
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_Date"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:hint="@string/productDescription"
            android:inputType="textMultiLine"
            android:padding="14dp" />

        <TextView
            android:id="@+id/receptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productDescription"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:drawableEnd="@drawable/arrow_down"
            android:hint="Receptions"
            android:padding="12dp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@id/receptions"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <CheckBox
            android:id="@+id/new_check"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_spinner"
            android:text="New Product"
            />

        <Button
            android:id="@+id/product_addButton"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_check"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/add_product" />

        <TextView
            android:layout_width="301dp"
            android:layout_height="0dp"
            android:layout_below="@id/product_addButton"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="37dp"
            android:padding="12dp" />
    </RelativeLayout>
</ScrollView>