<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".AdminMaintainItem">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp">
        <ImageView
            android:id="@+id/item_image_m"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp" />

        <EditText

            android:id="@+id/item_name_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_image_m"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:hint="@string/productName" />

        <EditText
            android:id="@+id/Product_item_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:hint="@string/ProductPrice"
            android:layout_below="@id/item_name_m"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/Product_Stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_item_Price"
            android:layout_marginTop="10dp"
            android:background="@drawable/atw_border_image"
            android:orientation="horizontal"
            android:paddingEnd="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738">

            <RadioButton
                android:id="@+id/rd_item_InStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:text="@string/instock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

            <RadioButton
                android:id="@+id/rd_item_OutStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outStock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.878"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/Product_COD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Product_Stock"
            android:layout_marginTop="10dp"
            android:background="@drawable/atw_border_image"
            android:orientation="horizontal"
            android:paddingEnd="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738">

            <RadioButton
                android:id="@+id/rd_item_BtnAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:text="@string/CODAvaliable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

            <RadioButton
                android:id="@+id/rd_item_BtnNotAvailable"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text="@string/CODUnavaliable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.878"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

        </RadioGroup>

        <EditText
            android:id="@+id/Product_item__DeliveryArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Product_COD"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:padding="8dp"
            android:hint="@string/DeliveryArea"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Product_item__Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@+id/Product_item__DeliveryArea"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:hint="@string/DeliveryDate" />

        <EditText
            android:id="@+id/product_item_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@+id/Product_item__Date"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:hint="@string/productDescription"
            android:inputType="textMultiLine" />


        <Spinner
            android:id="@+id/category_item__spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/product_item_Description"
            android:layout_marginTop="10dp"
            android:layout_marginRight="45dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="24dp"
            android:background="@drawable/round_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />
        <CheckBox
            android:id="@+id/new_check"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_item__spinner"
            android:text="New Product"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/new_check"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/lineq1">


            <Button
                android:id="@+id/delete_button_I"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/delete_btn"
                android:onClick="onClick"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/update_button_I"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/update_btn"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>